deployment07122021/objects/Books__c.object
<CustomObject>
    <label>Books</label>
    <nameField>
        <label>Books Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_ID__c</fullName>
        <displayFormat>B-{00000}</displayFormat>
        <inlineHelpText>B-{00000}</inlineHelpText>
        <label>Book_ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Date_of_arrival__c</fullName>
        <label>Date of arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_of_the_book__c</fullName>
        <label>Price of the book</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Magzines</fullName>
                </value>
                <value>
                    <fullName>Periodicals</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>WhitePapers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Book_ID__c</columns>
        <columns>Author__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>